# pgk2023

lab2_openGl/: CMakeLists.txt  lab2_1.cpp  lab2_2.cpp  lab2_2_drawing.hpp
